--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nav",
+  "name": "youtube",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://kishu1998.github.io/youtube",
